multicluster/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "name=aspen-dashboard"
  labels:
    app: aspen-mesh-controlplane
    release: istiod
  name: aspen-mesh-controlplane-lb
  namespace: istio-system
spec:
  ports:
  - name: http
    port: 19001
    protocol: TCP
    targetPort: http
  selector:
    app: aspen-mesh-controlplane
  type: LoadBalancer
